# Avantio_Crawler

./: README.md  pyproject.toml
src/: execute_crawler.py  main.py
src/crawler/: driver.py
src/crawler/login/: frontpage.py  twoFA.py
src/crawler/review_page/: airbnb.py  review_scrap.py
src/database/: connect.py  query.py
src/load_sheets/: create_tokens.py  send_to_sheets.py
src/logs/: log.py
