[tool.poetry]
name = "avantio-crawler"
version = "0.1.0"
description = ""
authors = ["AngeloGagno <angelogagno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
sqlalchemy = "^2.0.38"
psycopg-binary = "^3.2.5"
selenium = "^4.29.0"
psycopg2-binary = "^2.9.10"
openpyxl = "^3.1.5"
pyotp = "^2.9.0"
loguru = "^0.7.3"
google-api-python-client = "^2.165.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
